--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -34,15 +34,15 @@
 
 .background {
 	background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAG0lEQVQYV2NkYGD4z8DAwMgABXAGNgGwSgwVAFbmAgXQdISfAAAAAElFTkSuQmCC"), url("../images/indexplaceholder.png");
-  	background-repeat: repeat;
-  	background-blend-mode:color-dodge;
-  	background-size: auto, cover;
-  	width: 100%;
-  	height: 100%;
-  	position: absolute;
-  	top: 0px;
-  	left: 0px;
-  	z-index: 1;
+	background-repeat: repeat;
+	background-blend-mode:color-dodge;
+	background-size: auto, cover;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 1;
 }
 
 #aboutus {
@@ -52,18 +52,21 @@
 	overflow:auto;
 }
 
-#presentvideo {
+.presentvideo {
 	margin: auto;
 	text-align:center;
+	width: 260px;
+	margin-bottom: 50px;
 }
-#presentvideo video {
+
+.presentvideo video {
 	border: solid #FF8E60 5px;
-	width: 500px;
+	width: 250px;
 }
 
 .column1home {
 	float:left;
-	width: 35%;
+	width: 45%;
 	text-align:center;
 	padding:25px;
 	box-sizing:border-box;
@@ -88,7 +91,7 @@
 
 @media only screen and (max-width:1000px) {
 	[id = "aboutus"] {
-		width:100%;
+		width:100%!important;
 	}
 	[class = "column1home"] {
 		overflow:auto;
