--- a/css/stylemembers.css
+++ b/css/stylemembers.css
@@ -66,3 +66,24 @@
         height: 400px;
     }
 }
+
+footer{
+	background-color: #FF8E41;
+	color: #402310;
+	width: 100%;
+	overflow:auto;
+	text-align: center;
+	border-top-style:dashed;
+	border-bottom-style: solid;
+	border-color: black;
+}
+
+aside{
+	width: 33.3%;
+	float: left;
+}
+
+aside h3{
+    font-family: 'Concert One', cursive;
+    font-size: 25px;
+}
