--- a/css/stylemembers.css
+++ b/css/stylemembers.css
@@ -31,6 +31,9 @@
     width: 150px;
     height: 150px;
     margin: auto;
+    border: solid #ff8e60 8px;
+    border-radius: 50%;
+    box-sizing: border-box;
 }
 .imgbox {
     width: 150px;
