--- a/css/stylename.css
+++ b/css/stylename.css
@@ -15,6 +15,9 @@
 .face {
     width: 100%;
     height: 100%;
+    border: solid #ff8e60 8px;
+    border-radius: 50%;
+    box-sizing: border-box;
 }
 
 footer{
