--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -33,10 +33,10 @@
 }
 
 .top-section__background {
-    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAG0lEQVQYV2NkYGD4z8DAwMgABXAGNgGwSgwVAFbmAgXQdISfAAAAAElFTkSuQmCC"), url("../images/indexplaceholder.png");
+    background-image: url("../images/background-photo.jpg");
     background-repeat: repeat;
     background-blend-mode: color-dodge;
-    background-size: auto, cover;
+    background-size: 100% 115%;
     width: 100%;
     height: 100%;
     position: absolute;
